# c-bootstrap

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  acc.py  grammar.md  main.cpp
compiler/: CMakeLists.txt  main.cpp
compiler/include/: AST.h  ASTNode.h  ASTVisitor.h  Lexer.h  Parser.h  Position.h  Preprocessor.h  Scanner.h  SourceHandler.h  SourceToken.h  Token.h
compiler/include/ast/: AddressOf.h  Allocation.h  ArrayAccess.h  ArrayType.h  Assign.h  BaseType.h  BinOp.h  Block.h  BoolLiteral.h  CharLiteral.h  ClassType.h  ClassTypeDecl.h  ConstructorDecl.h  ConstructorDef.h  Decl.h  Deletion.h  DestructorDecl.h  DestructorDef.h  DoWhile.h  EnumClassTypeDecl.h  EnumTypeDecl.h  Expr.h  FieldAccess.h  For.h  FunCall.h  FunDecl.h  FunDef.h  Identifier.h  If.h  IntLiteral.h  Literal.h  MemberAccess.h  MemberCall.h  Namespace.h  Op.h  ParenthExpr.h  PointerType.h  PrefixInc.h  PrefixOp.h  PrimitiveType.h  (+19 more)
compiler/include/passes/: DotGraph.h  NameAnalysis.h  Optimiser.h  SourceOutput.h  TypeAnalysis.h
compiler/include/targets/: GenerateMIPS.h  GenerateX86.h  MIPS.h  X86.h
compiler/src/: Lexer.cpp  Parser.cpp  Preprocessor.cpp  Scanner.cpp
compiler/src/ast/: AddressOf.cpp  Allocation.cpp  ArrayAccess.cpp  ArrayType.cpp  Assign.cpp  BaseType.cpp  BinOp.cpp  Block.cpp  BoolLiteral.cpp  CharLiteral.cpp  ClassType.cpp  ClassTypeDecl.cpp  ConstructorDecl.cpp  ConstructorDef.cpp  Deletion.cpp  DestructorDecl.cpp  DestructorDef.cpp  DoWhile.cpp  EnumClassTypeDecl.cpp  EnumTypeDecl.cpp  FieldAccess.cpp  For.cpp  FunCall.cpp  FunDecl.cpp  FunDef.cpp  Identifier.cpp  If.cpp  IntLiteral.cpp  MemberAccess.cpp  MemberCall.cpp  Namespace.cpp  ParenthExpr.cpp  PointerType.cpp  PrefixInc.cpp  PrefixOp.cpp  Program.cpp  ReferenceType.cpp  Return.cpp  Scope.cpp  SizeOf.cpp  (+12 more)
compiler/src/passes/: DotGraph.cpp  NameAnalysis.cpp  Optimiser.cpp  SourceOutput.cpp  TypeAnalysis.cpp
compiler/src/targets/: GenerateMIPS.cpp  GenerateX86.cpp  MIPS.cpp  X86.cpp
compiler/test/: CMakeLists.txt  Test_AST.cpp  Test_ASTAnalysis.cpp  Test_CodeGeneration.cpp  Test_Lexer.cpp  Test_Optimiser.cpp  Test_Parser.cpp  Test_Scanner.cpp
compiler/test/tests/lexer/: no_spaces.c  test_1.c
compiler/test/tests/parser/: binop.c  binop.cpp  class.cpp  fundecls.c  fundecls.cpp  structdecl.c  vardecl.c
compiler/test/tests/scanner/: header.h
compiler/test/tests/sem/: ambig.c  dupevar.c  nomain.c
cpp-base/: CMakeLists.txt  grammar.md  main.cpp
cpp-base/include/: AST.h  Lexer.h  Parser.h  Position.h  Scanner.h  Token.h  Tokeniser.h
cpp-base/include/ast/: ArrayType.h  BaseType.h  Block.h  Decl.h  FunDecl.h  PointerType.h  PrimitiveType.h  Program.h  Stmt.h  StructType.h  StructTypeDecl.h  Type.h  VarDecl.h
cpp-base/src/: Lexer.cpp  Parser.cpp  Scanner.cpp  Token.cpp  Tokeniser.cpp  Tokeniser.cxx
cpp-base/test/: CMakeLists.txt  Test_Lexer.cpp  Test_Parser.cpp  Test_Scanner.cpp
cpp-base/test/src/lexer/: allspaces.c  nested_comments.c  temp.c  test_comment.c
cpp-base/test/tests/parser/: fundecl.c
cpp-base/test/tests/scanner/: scanner.c
include/: AST.h  ASTNode.h  (+15 more)
test/: CMakeLists.txt  TestPath.h  Test_AST.cpp  Test_ASTAnalysis.cpp  Test_CodeGeneration.cpp  Test_FileSystem.cpp  Test_Generation.cpp  Test_Lexer.cpp  Test_Optimiser.cpp  Test_Parser.cpp  Test_Preprocessor.cpp  Test_Scanner.cpp
test/tests/: fibonacci.c  fibonacci.cpp  main.cpp  prep.cpp  test_string.h  tictactoe.c
test/tests/CallWithinNamespace/: test.cpp
test/tests/PreprocessorTest/TestAdjacentInclude/: test.cpp
test/tests/PreprocessorTest/TestIncludeChildDir/: test.cpp
test/tests/PreprocessorTest/TestNestedInclude/: test.cpp
test/tests/PreprocessorTest/TestPragmaOnce/: header.h  header_base.h  header_derived.h
test/tests/Test_ASTAnalysis/Allocations/: test.cpp
test/tests/Test_ASTAnalysis/AmbiguousIdentifier/: test.cpp
test/tests/Test_ASTAnalysis/AssignOverload/: test.cpp
test/tests/Test_ASTAnalysis/CallWithReferences/: test.cpp
test/tests/Test_ASTAnalysis/ClassCallsItsMethod/: test.cpp
test/tests/Test_ASTAnalysis/ClassCallsItsOwnCtor/: test.cpp
test/tests/Test_ASTAnalysis/ClassCallsItsOwnCtorNamespaced/: test.cpp
test/tests/Test_ASTAnalysis/ClassCallsStatic/: test.cpp
test/tests/Test_ASTAnalysis/DestructorMembers/: test.cpp
test/tests/Test_ASTAnalysis/DuplicateFunction/: test.cpp
test/tests/Test_ASTAnalysis/DuplicateVariable/: test.cpp
test/tests/Test_ASTAnalysis/FunModifiers/: test.cpp
test/tests/Test_ASTAnalysis/FunctionOverloading/: test.cpp
test/tests/Test_ASTAnalysis/MemberAccesses/: test.cpp
test/tests/Test_ASTAnalysis/MemberCalls/: test.cpp
test/tests/Test_ASTAnalysis/MemberVar/: test.cpp
test/tests/Test_ASTAnalysis/NameAnalysis/: test.cpp
test/tests/Test_ASTAnalysis/NamespaceClass/: test.cpp
test/tests/Test_ASTAnalysis/NamespaceFunction/: test.cpp
test/tests/Test_ASTAnalysis/NamespacePopulation/: test.cpp
test/tests/Test_ASTAnalysis/NoMainFunc/: test.cpp
test/tests/Test_ASTAnalysis/ReferenceClassBinOp/: test.cpp
test/tests/Test_ASTAnalysis/StringClass/: test.cpp
test/tests/Test_ASTAnalysis/SubscriptResolution/: test.cpp
test/tests/Test_ASTAnalysis/TypeDefReturnType/: test.cpp
test/tests/Test_ASTAnalysis/TypedefComparisons/: test.cpp
test/tests/Test_ASTAnalysis/UndefinedClass/: test.cpp
test/tests/Test_ASTAnalysis/UndefinedFunction/: test.cpp
test/tests/Test_ASTAnalysis/UndefinedVariable/: test.cpp
test/tests/Test_ASTAnalysis/UseBeforeDecl/: test.cpp
test/tests/Test_CodeGeneration/AddrOfRef/: test.cpp
test/tests/Test_CodeGeneration/Allocations/: test.cpp
test/tests/lexer/: alltokens.c  char_tests.c  errors.c  inclood.c  include_error.c
test/tests/parser/: binop.c  class.cpp  class2.cpp  fundecl.c  fundecls.c  fundecls.cpp  invalidfundef.c  structdecl.c
test/tests/preprocessor/: header.h  header1.h  header2.h  header3.h  header4.h  header_guard.h  pragma.h  pragma2.h  prog.c  prog2.c  prog3.c  prog4.c  prog5.c  prog6.c  prog7.c  test1.cpp  test2.cpp  test4.cpp
test/tests/scanner/: include.cpp  ppdirectives.cpp
test/tests/sem/: ambig.c  dupefun.c
(+200 files in other folders)
